--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <nav>
     <span class="logo">Student portal</span>
     <div class="searchBox">
-        <input  id="searchInput" type="search" placeholder="Search Student By Name,ID or Email">
-        <BUtton onclick="search()" id="search"><img width="28px" src="search.png" alt="search"></BUtton>
+       <input oninput="search()" id="searchInput" type="search" placeholder="Search Student By Name,ID or Email">
+        <BUtton  id="search"><img width="28px" src="search.png" alt="search"></BUtton>
     </div>
     <BUtton style="background-color: rgb(193, 255, 234);" onclick="showCreate()">Create student</BUtton>
     <BUtton style="background-color: rgb(255, 225, 193);" onclick="showEdit()">Edit Student</BUtton>
