--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <nav>
     <span class="logo">Student portal</span>
     <div class="searchBox">
-       <input oninput="search()" id="searchInput" type="search" placeholder="Search Student By Name,ID or Email">
+       <input oninput="search()" id="searchInput" type="search" placeholder="Search Student By Name,ID or Degree">
         <BUtton  id="search"><img width="28px" src="search.png" alt="search"></BUtton>
     </div>
     <BUtton style="background-color: rgb(193, 255, 234);" onclick="showCreate()">Create student</BUtton>
